k8s/recommendation/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
  ports:
    - name: http
      protocol: TCP
      port: 8081
