k8s/recommendation/recommendation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: swiperight-jwt
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
        - path: /recommendation/api/.*
          pathType: Prefix
          backend:
            service:
              name: recommendation
              port:
                number: 8080
